--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
    position: absolute;
    height: 1770px;
    top: -500px;
-   animation: mymove 4s infinite alternate-reverse;
+   animation: mymove 4s 0 alternate-reverse;
    animation-timing-function: linear;
    box-shadow: 60px 0 5px rgba(118, 3, 232, 0.4);
    filter: blur(10px);
@@ -185,13 +185,13 @@ body {
    top: -10px;
    left: 962px;
    rotate: -15.85deg;
-   animation: mymove2 4s infinite alternate-reverse;
+   animation: mymove2 4s 0 alternate-reverse;
    animation-timing-function: linear;
 }
 
 @keyframes mymove2 {
    from {
-      rotate: -15.85deg;
+      rotate: -16deg;
       top: -10px;
       left: 962px;
 
