--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
    box-sizing: border-box;
 }
 
-
-
 .background1 {
    position: relative;
    width: 1920px;
@@ -594,4 +592,71 @@ p.sum {
    position: absolute;
    top: 442px;
    left: 274px;
+}
+
+.background4 {
+   width: 1920px;
+   margin-top: -100px;
+}
+
+.contact {
+   width: 154px;
+   height: 46px;
+   top: 4175px;
+   left: 340px;
+   border-radius: 100px;
+   border: 1px solid #2A1055;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.contact p {
+   font-family: "Inter", sans-serif;
+   font-size: 13px;
+   font-weight: 500;
+   line-height: 15.73px;
+   letter-spacing: 0.02em;
+   color: #2A1055;
+}
+
+.bottomnav {
+   font-size: 15px;
+   font-weight: 400;
+   line-height: 18px;
+   text-align: left;
+   text-decoration: none;
+   display: inline-block;
+   margin-top: 32px;
+   margin-right: 21px;
+   color: #2A1055;
+   cursor: pointer;
+}
+
+a.bottomnav {
+   cursor: pointer;
+}
+
+.background5 {
+   margin-top: -46px;
+   width: 1920px;
+   height: 77px;
+   background-color: #2A1055;
+}
+
+.container3 {
+   width: 1239px;
+   height: 77px;
+   margin-left: auto;
+   margin-right: auto;
+   display: flex;
+   align-items: center;
+}
+
+.container3 p {
+   font-size: 13px;
+   font-weight: 400;
+   line-height: 18.79px;
+   color: #fff;
+   margin-right: 32px;
 }
