--- a/style.css
+++ b/style.css
@@ -48,14 +48,14 @@ body {
    from {
       left: 750px;
       border-radius: 2000px 600px 600px 2000px;
-      background-image: radial-gradient(#000427 20%, #7603e8 75%, #B100EF);
+      background-image: radial-gradient(#000427, #7603e8 75%, #B100EF);
    }
 
    to {
       left: 250px;
       box-shadow: 80px 0 10px rgba(118, 3, 232, 1);
       border-radius: 1000px 0 0 1000px;
-      background-image: radial-gradient(#000427 20%, #7603e8 65%, #B100EF);
+      background-image: radial-gradient(#000427, #7603e8 55%, #B100EF );
    }
 }
 
