--- a/style.css
+++ b/style.css
@@ -89,8 +89,10 @@ body {
 }
 
 .hug {
+   width: 226px;
    margin-top: 19px;
-   padding: 11px 24px;
+   text-align: center;
+   padding: 11px 0;
    border: 2px solid #fff;
    border-radius: 30px;
    color: #fff;
@@ -158,7 +160,7 @@ body {
 
 .abs6 {
    top: 32px;
-   left: 1412px;
+   left: 1435px;
 }
 
 
@@ -173,7 +175,7 @@ body {
    from {
       rotate: -16deg;
       top: -8px;
-      left: 1124px;
+      left: 1134px;
    }
 
    to {
